--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,9 +1,8 @@
 .carousel-container {
+  position: relative;
   width: 90%;
-  margin: 0 auto;
-  height: 600px;
+  margin: 100px auto 20px; /* Added top margin to avoid going under the navbar */
   overflow: hidden;
-
 }
 
 .carousel-slide {
@@ -20,9 +19,10 @@
 .carousel-item img {
   width: 100%;
   height: auto;
+  display: block;
 }
 
-/* .carousel-caption {
+.carousel-caption {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -30,7 +30,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   border-radius: 5px;
-} */
+}
 
 .carousel-control {
   position: absolute;
@@ -55,16 +55,13 @@
 @media screen and (max-width: 768px) {
   .carousel-container {
     height: 500px;
+    margin-top: 120px; /* Ensure there's enough margin on smaller screens */
   }
-  .carousel-slide{
+
+  .carousel-slide {
     height: 500px;
   }
-  
-
-
-
 }
-
 
 @keyframes marquee {
   0% {
@@ -78,4 +75,30 @@
 .marquee {
   display: flex;
   animation: marquee 30s linear infinite;
+}
+
+@keyframes left-to-right {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes right-to-left {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-left-to-right {
+  animation: left-to-right 15s linear infinite;
+}
+
+.animate-right-to-left {
+  animation: right-to-left 15s linear infinite;
 }
