--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -18,7 +18,7 @@
 
 .carousel-item img {
   width: 100%;
-  height: auto;
+  height: 700px;
   display: block;
 }
 
@@ -61,6 +61,13 @@
   .carousel-slide {
     height: 500px;
   }
+
+  .carousel-item img {
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    display: block;
+  }
 }
 
 @keyframes marquee {
@@ -70,6 +77,8 @@
   100% {
     transform: translateX(-100%);
   }
+
+
 }
 
 .marquee {
